--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@drizzle/vue-plugin": "^0.1.1",
     "@mdi/font": "^3.6.95",
+    "element-ui": "^2.13.2",
     "openzeppelin-solidity": "^2.1.1",
     "roboto-fontface": "*",
     "vuetify": "^2.2.11"
