--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -3,8 +3,8 @@
    "host": "localhost",
    "port": 3306,
    "username": "root",
-   "password": "password",
-   "database": "todolistdemo",
+   "password": "windellwin990901",
+   "database": "app_new",
    "synchronize": true,
    "logging": false,
    "entities": [
